@@ -18,6 +18,8 @@ bug_460127
 bug_471014
 bug_477532
 bug_501038
+bug_532395a
+bug_532395b
 bug_544172
 bug_552602
 bug_554833
